View Issue Details

IDProjectCategoryView StatusLast Update
0033423Open CASCADEOCCT:Codingpublic2024-07-17 12:55
Reporterdpasukhi Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status verifiedResolutionfixed 
Target Version7.7.3Fixed in Version7.9.0 
Summary0033423: Coding - Memory leak with locale conversion
DescriptionBig5 conversion has memory leak when create utf32 character per each symbol
Steps To ReproduceNA
TagsNo tags attached.
Test case numbernone

Activities

dpasukhi

2024-05-16 14:23

administrator   ~0115832

Needs to update src\Resource\Resource_Unicode.cxx
to avoid memory leaks

git

2024-05-16 17:49

administrator   ~0115836

Branch CR33423 has been created by hossamali.

SHA-1: 8e000056595a4423fa630abb1c47a01fddbdbf21


Detailed log of new commits:

Author: hosali
Date: Thu May 16 14:13:13 2024 +0000

    0033423: Coding - Memory leak with locale conversion
    
    use stack allocated temporary string

git

2024-05-16 18:07

administrator   ~0115837

Branch CR33423 has been updated by hossamali.

SHA-1: 9fcf16e55d67ae901579efee361c1ef9290f6f70


Detailed log of new commits:

Author: hosali
Date: Thu May 16 15:06:57 2024 +0000

    array initialization

git

2024-05-17 12:17

administrator   ~0115846

Branch CR33423 has been updated by hossamali.

SHA-1: 2d84bd811ceab9ac362550921344e7b4f4b9c5bf


Detailed log of new commits:

Author: hosali
Date: Fri May 17 09:16:33 2024 +0000

    use of copy initialization

git

2024-05-17 14:21

administrator   ~0115851

Branch CR33423 has been updated by hossamali.

SHA-1: 1a43b468bf04128dbdc4541f1086a590ad892d18


Detailed log of new commits:

Author: hosali
Date: Fri May 17 11:17:10 2024 +0000

    formatting

dpasukhi

2024-05-17 21:50

administrator   ~0115852

Last edited: 2024-05-17 21:51

needs to combine. Probably it is better to push with force and comment (ammend)

git

2024-05-20 13:18

administrator   ~0115858

Branch CR33423 has been updated forcibly by hossamali.

SHA-1: d0d62d75718ae2a681efdef6deb59a0ea395d0f0

hossamali

2024-05-21 18:48

developer   ~0115870

http://jenkins-test-10.nnov.opencascade.com/view/CR33423-master-hossamali/

dpasukhi

2024-05-23 12:42

administrator   ~0115887

Dear bugmaster,
please integrate:
OCCT: CR33423

git

2024-07-17 12:55

administrator   ~0116206

Branch CR33423 has been deleted by vglukhik.

SHA-1: d0d62d75718ae2a681efdef6deb59a0ea395d0f0

Issue History

Date Modified Username Field Change
2023-07-11 10:44 dpasukhi New Issue
2023-07-11 10:44 dpasukhi Assigned To => dpasukhi
2023-07-31 13:20 dpasukhi Target Version 7.7.2 => 7.7.3
2024-05-16 14:22 ebelouso Assigned To dpasukhi => hossamali
2024-05-16 14:23 dpasukhi Note Added: 0115832
2024-05-16 17:49 git Note Added: 0115836
2024-05-16 18:07 git Note Added: 0115837
2024-05-17 12:17 git Note Added: 0115846
2024-05-17 14:21 git Note Added: 0115851
2024-05-17 21:50 dpasukhi Note Added: 0115852
2024-05-17 21:51 dpasukhi Note Edited: 0115852
2024-05-20 13:18 git Note Added: 0115858
2024-05-21 18:48 hossamali Note Added: 0115870
2024-05-21 18:51 hossamali Assigned To hossamali => dpasukhi
2024-05-21 18:51 hossamali Status new => resolved
2024-05-21 18:51 hossamali Steps to Reproduce Updated
2024-05-23 12:42 dpasukhi Assigned To dpasukhi => bugmaster
2024-05-23 12:42 dpasukhi Status resolved => reviewed
2024-05-23 12:42 dpasukhi Note Added: 0115887
2024-07-08 21:04 dpasukhi Status reviewed => verified
2024-07-08 21:04 dpasukhi Resolution open => fixed
2024-07-08 21:04 dpasukhi Fixed in Version => 7.9.0
2024-07-08 21:04 dpasukhi Test case number => none
2024-07-17 12:55 git Note Added: 0116206