0033423: Coding - Memory leak with locale conversion

use of stack allocated temp string instead of dynamic one